# PyIndexGUI

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: rtd-publish.yml
docs/: index.md  installation.md  running.md
docs/user-guide/: aggregation.md  data-import.md  export.md  index-calculation.md  index.md  panel-balancing.md
src/: main.py
tests/: test_smoke.py
